[package]
name = "concerto"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "Orchestrate your scheduled tasks with precision timing - Spring Boot-like scheduling for Rust"
repository = "https://github.com/jatis-mobile/concerto-rs"
keywords = ["scheduler", "cron", "task", "scheduled", "concerto"]
categories = ["asynchronous", "concurrency"]

[dependencies]
concerto-macro = { path = "../concerto-macro", version = "0.1.0" }
concerto-runtime = { path = "../concerto-runtime", version = "0.1.0" }
tokio-cron-scheduler = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = "0.30"

# Examples  
[[example]]
name = "basic"
path = "../examples/basic.rs"

[[example]]
name = "advanced"
path = "../examples/advanced.rs"

[[example]]
name = "runnable-trait"
path = "../examples/runnable-trait.rs"

[[example]]
name = "ms-proof"
path = "../examples/ms-proof.rs"

[[example]]
name = "method-scheduled"
path = "../examples/method-scheduled.rs"

[[example]]
name = "combined-register-runnable"
path = "../examples/combined-register-runnable.rs"

[[example]]
name = "memory-cpu-benchmark"
path = "../examples/memory_cpu_benchmark.rs"

[[example]]
name = "stress-test"
path = "../examples/stress_test.rs"

[[bench]]
name = "scheduler_benchmark"
harness = false
path = "../benches/scheduler_benchmark.rs"
